# linuiz

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE.md  README  README.md  kernel.out  limine.cfg  makefile  qemu-run.bat  qemu-run.sh  run.bat  run.sh  rust-toolchain.toml  toolchain.toml  x86-unknown-none.json
boot/: Cargo.toml
boot/.cargo/: config.toml
boot/src/: boot.rs  lib.rs  sections.rs  segments.rs
efi-boot/: Cargo.toml
efi-boot/.cargo/: config.toml
efi-boot/src/: efi.rs  kernel_loader.rs  main.rs  memory.rs  protocol.rs  protocol_graphics.rs  protocol_helper.rs
efi-boot/src/elf/: header.rs  mod.rs  program_header.rs  section_header.rs
efi-boot/src/elf/headers/: header.rs  mod.rs  program_header.rs  section_header.rs
efi_boot/: Cargo.toml
efi_boot/src/: boot.rs  file.rs  kernel_loader.rs  lib.rs  main.rs  memory.rs  sections.rs  segments.rs
efi_boot/src/drivers/: mod.rs  protocol_graphics.rs
efi_boot/src/drivers/graphics/: mod.rs  protocol_graphics.rs
efi_boot/src/elf/: header.rs  mod.rs  program_header.rs  section_header.rs
kernel/: Cargo.toml  limine.cfg  riscv64gc-unknown-none.lds  x86_64-unknown-none.json  x86_64-unknown-none.lds
kernel/.cargo/: config.toml
kernel/lib/: Cargo.toml
kernel/lib/src/: addr.rs  cpu.rs  lib.rs  macros.rs
kernel/lib/src/acpi/: mod.rs
kernel/lib/src/elf/: header.rs  mod.rs  segment_header.rs
kernel/lib/src/instructions/: cpuid.rs  interrupts.rs  mod.rs  tlb.rs
kernel/lib/src/memory/: falloc.rs  frame.rs  frame_manager.rs  malloc.rs  mod.rs  page_manager.rs  paging.rs  uefi.rs
kernel/lib/src/registers/: cr2.rs  cr3.rs  cr4.rs  mod.rs  msr.rs
kernel/lib/src/structures/: gdt.rs  idt.rs
kernel/libkernel/: Cargo.toml
kernel/libkernel/src/: lib.rs
kernel/libkernel/src/instructions/: cpuid.rs  mod.rs  pwm.rs
kernel/src/: ap_trampoline.asm  bitarray.rs  block_allocator.rs  block_malloc.rs  clock.rs  cpu.rs  frame_allocator.rs  gdt.rs  instructions.rs  interrupts.rs  kernel.rs  lib.rs  linear_falloc.rs  linker_statics.rs  local_state.rs  logging.rs  lpu.rs  main.rs  pic.rs  pic8259.rs  privilege_level.rs  scheduling.rs  slob.rs  stdout.rs  syscall.rs  timer.rs
kernel/src/boot/: mod.rs  rv64.rs  x64.rs
kernel/src/drivers/: ahci.rs  clock.rs  emuout.rs  hpet.rs  mod.rs  nvme.rs  sata.rs  serial.rs  vga.rs
kernel/src/instructions/: interrupts.rs  mod.rs  tables.rs  tlb.rs
kernel/src/interrupts/: apic.rs  exceptions.rs  instructions.rs  ioapic.rs  mod.rs  stubs.rs  syscall.rs
kernel/src/io/: mod.rs  port.rs  vga_buffer.rs
kernel/src/local_state/: int_ctrl.rs  mod.rs  timer.rs
kernel/src/lpu/: mod.rs
kernel/src/memory/: block_allocator.rs  bump_allocator.rs  frame.rs  frame_allocator.rs  frame_manager.rs  frame_map.rs  global_memory.rs  mod.rs  page.rs  page_manager.rs  paging.rs  slob.rs  uefi.rs
kernel/src/pic8259/: mod.rs  pit.rs
kernel/src/registers/: cr3.rs  mod.rs  rsp.rs
kernel/src/scheduling/: mod.rs
kernel/src/structures/: gdt.rs  idt.rs  memory.rs  mod.rs  runtime_services.rs  tss.rs
kernel/src/tables/: acpi.rs  gdt.rs  idt.rs  mod.rs  tss.rs
kernel/src/time/: clock.rs  mod.rs  timer.rs  timers.rs
libkernel/: Cargo.toml  addr.rs
libkernel/src/: addr.rs  bit_switch.rs  bitarray.rs  boot_info.rs  bv_array.rs  cell.rs  cpu.rs  lib.rs  lpu.rs  macros.rs  rwbitarray.rs  sync.rs  syscall.rs  volatile.rs  volatile_cell.rs
libkernel/src/acpi/: madt.rs  mod.rs  rdsp.rs  xsdt.rs
libkernel/src/collections/: bit_array.rs
libkernel/src/cpu/: mod.rs  x64.rs  x86_64.rs
libkernel/src/elf/: header.rs  mod.rs  program_header.rs  section_header.rs  segment_header.rs
libkernel/src/instructions/: cpuid.rs  interrupts.rs  mod.rs  pwm.rs  sync.rs  tlb.rs
libkernel/src/interrupts/: mod.rs
libkernel/src/io/: legacy_pci.rs  mod.rs  pci.rs  pcie.rs
libkernel/src/memory/: block_allocator.rs  falloc.rs  frame.rs  frame_allocator.rs  frame_manager.rs  global_allocator.rs  global_memory.rs  malloc.rs  mmio.rs  mod.rs  page.rs  page_manager.rs  paging.rs  uefi.rs  volatile.rs
libkernel/src/registers/: cr2.rs  cr3.rs  flags.rs  mod.rs  msr.rs  rflags.rs  stack.rs  tsc.rs
libkernel/src/structures/: apic.rs  gdt.rs  guid.rs  idt.rs  mod.rs  pic8259.rs  pit.rs  rtc.rs  system_table.rs
src/: Cargo.toml  kernel.rs  kernel_entry.asm  riscv64gc-unknown-none.lds
src/.cargo/: config.toml
src/acpica/: Cargo.toml
src/acpica-sys/: Cargo.toml
src/boot/: boot16_gdt.asm  boot32.asm  bootloader.asm
src/drivers/: ABI.md  Cargo.toml  x86_64-linuiz-driver.json  x86_64-linuiz-driver.lds  x86_64-unknown-linuiz.json
src/kernel/: Cargo.toml  build.rs  x86_64-linuiz-kernel.json  x86_64-linuiz-kernel.lds  x86_64-target.json
src/kernel/.cargo/: config.toml
src/kernel/lds/: x86_64-unknown-none.lds
src/kernel/src/: acpi.rs  boot.rs  clock.rs  error.rs  exceptions.rs  init.rs  interrupts.rs  local_state.rs  logging.rs  main.rs  modules.rs  num.rs  panic.rs  params.rs  rand.rs  scheduling.rs  stdout.rs  syscall.rs  time.rs
src/libkernel/: Cargo.toml
src/libkernel/src/: addr.rs  cell.rs  cpu.rs  lib.rs  macros.rs  sync.rs  syscall.rs
src/liblz/: Cargo.toml
src/liblz/src/: lib.rs
src/libsys/: Cargo.toml
src/libsys/src/: constants.rs  lib.rs  macros.rs
src/msr/src/: lib.rs
src/pic_8259/: Cargo.toml
src/pic_8259/src/: lib.rs
src/shared/: Cargo.toml
src/shared/apic/: Cargo.toml
src/shared/bitslice/: Cargo.toml
src/shared/freelist/: Cargo.toml
src/shared/libarch/: Cargo.toml
src/shared/libcommon/: Cargo.toml
src/shared/libkernel/: Cargo.toml
src/shared/libsys/: Cargo.toml
src/shared/lzalloc/: Cargo.toml
src/shared/msr/: Cargo.toml
src/shared/pic_8259/: Cargo.toml
src/shared/port-rs/: Cargo.toml
src/shared/slab/: Cargo.toml
src/shared/slab_alloc/: Cargo.toml
src/shared/uart/: Cargo.toml
src/slab_alloc/src/: lib.rs
src/userspace/: ABI.md  Cargo.toml  x86_64-target.json
src/userspace/.cargo/: config.toml
src/userspace/test_driver/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: build.rs  main.rs  run.rs  runner.rs  target.rs
(+607 files in other folders)
