[workspace]
resolver = "3"
exclude = ["xtask"]
members = [
    "src/kernel",
    "src/shared/apic",
    "src/shared/libkernel",
    "src/shared/libsys",
    "src/shared/msr",
    "src/shared/pic_8259",
    # "src/shared/slab_alloc",
    # "src/userspace/nvme",
    # "src/userspace/test_driver",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
[profile.release.package.kernel]
codegen-units = 1
