[workspace]
resolver = "3"
exclude = [
    "xtask",
    "src/slab_alloc",
    "src/userspace/nvme",
    "src/userspace/test_driver",
]
members = [
    "src/kernel",
    "src/libkernel",
    "src/apic",
    "src/msr",
    "src/pic_8259",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
[profile.release.package.kernel]
codegen-units = 1
