[package]
name = "boot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "*", features = ["exts"] }
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs" }
uefi-macros = "*"
log = { version = "*", default-features = false }
rlibc = "*"
libstd = { path = "../kernel/lib", default-features = false }

[[bin]]
name = "BOOTX64"
path = "src/boot.rs"