[package]
name = "boot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "*"
uefi = { version = "*", features = ["exts"] }
uefi-services = { version = "*" }
uefi-macros = { version = "*" }
log = { version = "*", default-features = false }
libkernel = { path = "../libkernel/", default-features = false }

[[bin]]
name = "BOOTX64"
path = "src/boot.rs"