[package]
name = "BOOTX64"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "*"
uefi-macros = "*"
uefi-services = { version = "*", features = ["qemu"] }
log = { version = "*", default-features = false }