[package]
name = "BOOTX64"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { path = "../../uefi-rs/" }
uefi-macros = { path = "../../uefi-rs/uefi-macros" }
uefi-services = { path = "../../uefi-rs/uefi-services", features = ["qemu"] }
log = { version = "*", default-features = false }