[package]
name = "efi_boot"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "*", features = ["exts"] }
uefi-macros = "*"
uefi-services = { version = "*", features = ["qemu"] }
log = { version = "*", default-features = false }
rlibc = "*"

[patch.crates-io]
uefi = { path = "../../uefi-rs/" }
uefi-macros = { path = "../../uefi-rs/uefi-macros" }
uefi-services = { path = "../../uefi-rs/uefi-services" }

[[bin]]
name = "BOOTX64"
path = "src/boot.rs"