[package]
name = "efi_boot"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "*", features = ["exts"] }
uefi-services = { version = "*", features = ["qemu"] }
uefi-macros = "*"
log = { version = "*", default-features = false }
rlibc = "*"
libkernel = { path = "../libkernel", default-features = false }

[[bin]]
name = "BOOTX64"
path = "src/boot.rs"