[package]
name = "kernel"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkernel = { path = "../libkernel/", features = ["global_allocator"] }
log = { version = "*", default-features = false }
bit_field = "*"
bitflags = "*"
num_enum = { version = "*", default-features = false }
spin = "*"
crossbeam-queue = { version = "*", default-features = false, features = ["alloc"] }
paste = "*"
x86_64 = "*"
limine = "*"
raw-cpuid = "*"
lazy_static = { version = "*", features = ["spin_no_std"] }
