[package]
name = "libkernel"
version = "0.1.0"
authors = ["semiviral"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
efi_boot = { path = "../efi_boot/" }
lazy_static = { version = "*", features = ["spin_no_std"] }
log = { version = "*", default-features = false }
bit_field = "*"
bitflags = "*"
x86_64 = "*"
spin = "*"