[package]
name = "libkernel"
version = "0.1.0"
authors = ["semiviral"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "*", features = ["spin_no_std"] }
log = { version = "*", default-features = false }
bit_field = "*"
bitflags = "*"
paste = "*"
num_enum = { version = "*", default-features = false }
x86_64 = "*"
spin = "*"
limine = "*"

[features]
default = ["panic_handler", "alloc_error_handler"]
panic_handler = []
alloc_error_handler = []
global_allocator = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"