[workspace]
members = [
    "kernel",

    "libsys",
    "libkernel",

    "shared/apic",
    "shared/bitslice",
    "shared/bump",
    "shared/freelist",
    "shared/msr",
    "shared/pic_8259",
    "shared/port-rs",
    "shared/slab",
    "shared/slob",
    "shared/vmem",

    "userspace/test_driver"
]

[profile.dev]
opt-level = 1
overflow-checks = true
lto = "off"

[profile.release]
lto = true
codegen-units = 1