[workspace]
members = [
    "kernel",

    "libsys",
    "libkernel",

    "shared/apic",
    "shared/msr",
    "shared/pic_8259",
    "shared/port-rs",
    "shared/slab",

    "userspace/test_driver",
]

[profile.dev]
opt-level = 1
overflow-checks = true
lto = "off"

[profile.release]
lto = true
codegen-units = 1
