[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
    "native-tls",
    "blocking",
] }
tar = { version = "0.4", default-features = false }
anyhow = "1.0"
xshell = "0.2"
toml = "0.7"
lzma-rs = "0.3"

[profile.dev]
debug = false
