[package]
name = "kernel"
version = "0.0.0"
edition = "2021"

[dependencies.port-rs]
path = "../shared/port-rs/"
[dependencies.msr]
path = "../shared/msr/"
[dependencies.apic]
path = "../shared/apic/"
[dependencies.libsys]
path = "../shared/libsys/"
[dependencies.libkernel]
path = "../shared/libkernel/"


[dependencies]
acpi = { git = "https://github.com/linuiz-project/acpi", default-features = false, features = [
    "allocator_api",
] }
limine = { git = "https://github.com/linuiz-project/limine-rs/", features = [
    "requests-section",
] }
log = { version = "0.4", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
rand_core = { version = "0.6", default-features = false }
rand_pcg = { version = "0.3", default-features = false }
num_enum = { version = "0.6", default-features = false }
uuid = { version = "1.3", default-features = false, features = ["v4"] }
elf = { version = "0.7", default-features = false, features = ["nightly"] }
bitvec = { version = "1.0", default-features = false, features = [
    "atomic",
    "alloc",
] }
uart = "0.1"
spin = "0.9"
bit_field = "0.10"
bitflags = "2.3"
paste = "1.0"
rustc-demangle = "0.1"
tar-no-std = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
ia32utils = { version = "0.14", package = "x86_64" }
pic_8259 = { path = "../shared/pic_8259/" }
raw-cpuid = "11.0"


[profile.dev]
opt-level = 0
codegen-units = 16
overflow-checks = true
lto = "off"

[profile.release]
codegen-units = 1
lto = "fat"
