[package]
name = "kernel"
version = "0.0.0"
edition = "2024"

[dependencies.msr]
path = "../shared/msr/"
[dependencies.apic]
path = "../shared/apic/"
[dependencies.libsys]
path = "../shared/libsys/"
[dependencies.libkernel]
path = "../shared/libkernel/"


[dependencies]
acpi = { git = "https://github.com/linuiz-project/acpi", default-features = false, features = [
    "allocator_api",
] }
limine = { version = "0.4", features = ["uuid"] }
log = { version = "0.4", default-features = false }
getrandom = "0.3"
rand_core = { version = "0.9", default-features = false }
rand_pcg = { version = "0.9", default-features = false }
num_enum = { version = "0.7", default-features = false }
uuid = { version = "1.16", default-features = false, features = ["v4"] }
elf = { version = "0.7", default-features = false, features = ["nightly"] }
bitvec = { version = "1.0", default-features = false, features = [
    "atomic",
    "alloc",
] }
uart = { version = "1.0", default-features = false }
ioports = "1.0"
spin = "0.10"
bit_field = "0.10"
bitflags = "2.9"
paste = "1.0"
rustc-demangle = "0.1"
tar-no-std = "0.3"
circular-buffer = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
ia32utils = { version = "0.15", package = "x86_64" }
pic_8259 = { path = "../shared/pic_8259/" }
raw-cpuid = "11.0"


[profile.dev]
opt-level = 0
codegen-units = 16
overflow-checks = true
lto = "off"
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
