[package]
name = "kernel"
version = "0.0.0"
edition = "2024"

[dependencies.msr]
path = "../msr"
[dependencies.apic]
path = "../apic"
[dependencies.libkernel]
path = "../libkernel"


[dependencies]
libsys = { git = "https://github.com/linuiz-project/libsys" }
limine = { version = "0.5", features = ["uuid"] }
log = { version = "0.4", default-features = false }
getrandom = "0.3"
rand_pcg = { version = "0.9", default-features = false }
num_enum = { version = "0.7", default-features = false }
uuid = { version = "1.16", default-features = false, features = ["v4"] }
elf = { version = "0.7", default-features = false, features = ["nightly"] }
bitvec = { version = "1.0", default-features = false, features = [
    "atomic",
    "alloc",
] }
uart = { version = "2.0", default-features = false, features = [
    "address_impl",
] }
ioports = "1.0"
spin = "0.10"
bit_field = "0.10"
bitflags = "2.9"
paste = "1.0"
rustc-demangle = "0.1"
# circular-buffer = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[target.x86_64-unknown-none.dependencies]
ia32utils = { version = "0.15", package = "x86_64" }
pic_8259 = { path = "../pic_8259/" }
raw-cpuid = "11.0"
