[package]
name = "libkernel"
version = "0.0.1"
authors = ["semiviral"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "*", default-features = false }
bit_field = "*"
bitflags = "*"
paste = "*"
num_enum = { version = "*", default-features = false }
spin = "*"