[package]
name = "apic"
version = "0.1.0"
edition = "2021"
description = "Software implementation of the x86 APIC."
license = "BSD-3-Clause"
repository = "https://github.com/linuiz-project/linuiz/src/shared/apic/"
readme = ""
keywords = []
categories = []

[dependencies.msr]
path = "../msr/"
[dependencies]
bit_field = "*"
bitflags = "*"
