[package]
name = "libarch"
version = "0.0.0"
edition = "2021"

[dependencies.libcommon]
path = "../libcommon/"
features = ["global_allocator"]
[dependencies]
log = "*"
paste = "*"
bitflags = "*"
bit_field = "*"
spin = "*"
num_enum = { version = "*", default-features = false }
acpi = { path = "../../../../acpi/acpi/" }
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "*"
raw-cpuid = "*"