[package]
name = "libcommon"
version = "0.0.1"
authors = ["semiviral"]
edition = "2021"

[dependencies]
log = { version = "*", default-features = false }
bit_field = "*"
bitflags = "*"
paste = "*"
num_enum = { version = "*", default-features = false }
spin = { git = "https://github.com/semiviral/spin-rs" }
port-rs = { path = "../port-rs/" }
acpi = { git = "https://github.com/semiviral/acpi" }
aml = "*"
bytemuck = "*"

[features]
global_allocator = []