[package]
name = "libcommon"
version = "0.0.1"
authors = ["semiviral"]
edition = "2021"

[dependencies.lzalloc]
git = "https://github.com/linuiz-project/lzalloc"
[dependencies.spin]
git = "https://github.com/semiviral/spin-rs"
[dependencies]
log = { version = "*", default-features = false }
bit_field = "*"
bitflags = "*"
paste = "*"
num_enum = { version = "*", default-features = false }
port-rs = { path = "../port-rs/" }
# aml = "*"
bytemuck = "*"

[features]
global_allocator = []