[package]
name = "libkernel"
version = "0.1.0"
edition = "2024"
description = "Linuiz kernel library."
license = "BSD-3-Clause"
repository = "https://github.com/linuiz-project/linuiz/src/libkernel/"
readme = ""
keywords = []
categories = []

[dependencies.libsys]
path = "../libsys/"

[dependencies]
bytemuck = "*"
bitflags = "*"
