[package]
name = "libsys"
version = "0.1.0"
edition = "2024"

[dependencies]
num_enum = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false, optional = true }
uuid = { version = "1.3", default-features = false }
static_assertions = "1.1"

[features]
default = ["logging"]
logging = ["log"]
