[package]
name = "lzalloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { git = "https://github.com/semiviral/spin-rs" }
bytemuck = { version = "*", optional = true }

[features]
alloc_static = ["bytemuck"]