[package]
name = "port-rs"
version = "0.1.0"
edition = "2021"
description = "Software implementation of port-based I/O, supporting both x86 serial ports and MMIO address ports."
license = "BSD-3-Clause"
repository = "https://github.com/pyre-project/pyre/src/shared/port-rs/"
readme = ""
keywords = []
categories = []

[lib]
name = "port"
path = "src/lib.rs"
