[package]
name = "uart"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/pyre-project/pyre/src/shared/uart/"
keywords = ["uart", "uart_16550", "serial", "io", "osdev"]
categories = ["no-std", "embedded"]
description = "A clean implementation of the UART_16550 device functionality."

[dependencies]
bitflags = "2.0.2"
bit_field = "0.10.2"
